Sonar code smell fix